--- a/settings/internal/com.kms.katalon.execution.webui.properties
+++ b/settings/internal/com.kms.katalon.execution.webui.properties
@@ -1,2 +1,7 @@
-#Wed Jul 03 11:24:53 WIB 2019
+#Wed Jul 03 11:31:58 WIB 2019
 execution.default.selectingCapturedObjectSelectorMethod="XPATH"
+execution.default.webUi.enablePageLoadTimeout=false
+execution.default.webUi.pageLoadTimeout=30
+execution.default.webUi.ignorePageLoadTimeOutException=false
+execution.default.webUi.actionDelay=0
+execution.default.waitForIEHanging=600
